# customer-visit-system

./: .dockerignore  .gitignore  ANALYSIS.md  ANALYSIS_UPDATED.md  CLAUDE.md  CONTINUAL_LEARNING.md  DEPLOYMENT_GUIDE.md  Makefile  PLAN.md  PLAN_BY_GPT.md  PRESENTATION.md  PROMPT.md  README.md  REPORT.md  REPORT_PROGRESS.md  docker-compose.dev.yml  docker-compose.prod.yml  last-session.md  pyproject.toml  test.db  test_404_endpoints.py  test_camera_streaming_proxy.py  test_worker_api.py  test_worker_auth.py
.cursor/: mcp.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  code_style_conventions.md  deadlock_prevention_strategy.md  development_commands.md  development_commands_and_setup.md  development_workflow.md  face_recognition_crud_implementation.md  known_issues_solutions.md  project-status-summary.md  project_completion_status.md  project_overview.md  project_structure.md  suggested_commands.md  system_architecture.md  system_architecture_and_patterns.md  task_completion_checklist.md  tech_stack.md  updated_wbs_completion_status_august_22_2025.md  wbs_completion_analysis_august_2025.md  worker_api_consolidation_plan.md
apps/api/: .dockerignore  .env.example  DATABASE.md  Dockerfile  alembic.ini  bootstrap.sql  bootstrap_api_key.py  bootstrap_worker_setup.py  create_admin.py  create_worker_api_key.py  debug_startup.py  execute_bootstrap.py  openapi.json  requirements.txt  simple_bootstrap.py  temp_bootstrap_endpoint.py  test_camera_proxy.py  test_camera_sse.py  test_sse_camera_status.py  test_websocket_updates.py  test_worker_monitoring.py  test_worker_shutdown.py
apps/api/alembic/: env.py
apps/api/app/: main.py  schemas.py
apps/api/scripts/: db_manage.py  (+5 more)
apps/web/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/worker/: .env.example  .env.worker1  .env.worker2  .env.worker3  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SIMPLIFIED_WORKER_ARCHITECTURE.md  WORKER_SOCKET_MIGRATION.md  requirements.txt  simple_test.py  test_camera_assignment.py  test_enhanced_detection.py  test_enhanced_worker_streaming.py  test_worker_basic.py  test_worker_registration.py
contracts/: CustomerProfile.v1.json  Event.FaceDetected.v1.json  VisitRecord.v1.json
docs/: ENHANCED_FACE_DETECTION.md  QUICKSTART.md  RUNBOOK-systemd.md  WORKER_API_KEY_SETUP.md  admin-account-management.md  index.md  openapi.json  postman_collection.json  visit-gallery-improvements-todo.md
docs/architecture/: worker-migration.md
docs/daily-logs/: 2025-08-22.md  2025-08-23.md  2025-09-05.md  2025-09-07.md  2025-09-08.md  2025-09-15.md  2026-02-01.md  2026-02-04.md
docs/setup/: deployment-guide.md
docs/specs/: face-processing.md  staff-face-management.md
docs/status/: analysis.md  plan.md
docs/worker/: README.md
infra/compose/: docker-compose.dev.yml
infra/systemd/: face-api.service  face-web.service  face-worker.service  face.env.example
scripts/: check_worker_ports.py  e2e_demo.sh  fix_camera_streaming.py  install_face_detection_deps.sh  simple_e2e_test.sh  test_basic_worker.py  test_webcam_indexing.py  verify_no_listening_ports.sh
scripts/dev/: api_dev.sh  web_dev.sh  worker_dev.sh
scripts/mac/: setup.zsh
scripts/prod/: install_systemd.sh  setup_venvs.sh
(+211 files in other folders)
