[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-recognition"
version = "0.1.0"
description = "Face Recognition System with FastAPI, Worker, and Web UI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Face Recognition Team"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "apps/worker/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --tb=short"
